--- a/.github/workflows/multi_deploy.yml
+++ b/.github/workflows/multi_deploy.yml
@@ -2,9 +2,9 @@ name: Multi Environments Deploy
 on:
   # Triggers the workflow on push to matching branches
   workflow_dispatch: 
-  # push:
-  #   branches:
-  #     - multi_deploy  
+   push:
+     branches:
+       - main  
 env:
   duplo_host: https://included-ai.duplocloud.net 
   duplo_token: "${{ secrets.DUPLO_TOKEN }}"
