--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,13 @@ env:
   SERVICE_NAME: included
   TENANT_NAME: test
 
+inputs:
+  tenant1:
+    description: 'tenan1'
+    required: true
+    default: true
+    type: boolean
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
