--- a/.github/workflows/multi_deploy.yml
+++ b/.github/workflows/multi_deploy.yml
@@ -8,6 +8,11 @@ on:
         required: true
         default: true
         type: boolean
+      tenant1:
+        description: 'tenant2'
+        required: true
+        default: true
+        type: boolean
   push:
     branches:
     - main  
@@ -24,29 +29,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-    #This part is important - it will be used by the deploy job
-    outputs:
-      tenant_names: "[ ${{ env.TENANT_NAMES }} ]"
-  deploy:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    strategy:
-      matrix:
-        tenant:  ${{fromJson(needs.build.outputs.tenant_names)}}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Print
-        run: |
-          echo "Tenant name is : ${{ matrix.tenant }}"
-      
-      # Update the backend service to use the new image.
-      - name: Deploy
-        uses: duplocloud/ghactions-service-update@master
-        with:
-          tenant: "${{ matrix.tenant }}"
-          services: |-
-            [
-              { "Name": "${{ env.SERVICE_NAME }}", "Image": "aa:bb" }
-            ]
+      - name: tenant1
+        run: echo "tenant1"
+        if: inputs.tenant1
+      - name: tenant1
+        run: echo "tenant2"
+        if: inputs.tenant2
