--- a/.github/workflows/success_fail.yml
+++ b/.github/workflows/success_fail.yml
@@ -1,5 +1,6 @@
 name: SuccessFailConditions
 
+
 on:
   push:
     branches:
@@ -12,7 +13,5 @@ jobs:
       - name: Step 1
         run: echo "This step will fail" && exit 1
       - name: Step 2
-        continue-on-error: true
+        if: ${{ failure() }}
         run: echo "This step will run even if Step 1 fails"
-      - name: Step 3
-        run: echo "This step will not run if Step 1 or Step 2 fails"
