--- a/.github/workflows/success_fail.yml
+++ b/.github/workflows/success_fail.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Step 1
         run: echo "This step will fail" && exit 1
+        continue-on-error: true
       - name: Step 2
         if: ${{ failure() }}
         run: echo "This step will run even if Step 1 fails"
