--- a/.github/workflows/rebase.yml
+++ b/.github/workflows/rebase.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Fetch all branches
       run: git fetch --all
 
-    - name: Rebase dev with master
+    - name: Rebase dev with main
       run: |
         git checkout development
-        git pull origin master --rebase
+        git pull origin main --rebase
         git push origin development
